@@ -21,6 +21,7 @@ import org.apache.spark
 import org.apache.spark.deploy.SparkHadoopUtil
 import org.apache.spark.rpc.RpcEnv
 import org.apache.spark.scheduler.cluster.CoarseGrainedClusterMessages.{RetrieveSparkAppConfig, SparkAppConfig}
+import org.apache.spark.ui.{JettyUtils, SnappyBasicAuthenticator}
 
 /**
  * Calls that are needed to be sent to snappy-cluster classes because
@@ -79,6 +80,13 @@ object SparkCallbacks {
   def isDriver: Boolean = {
     SparkEnv.get != null &&
         SparkEnv.get.executorId == SparkContext.DRIVER_IDENTIFIER
+  }
+
+  def setAuthenticatorForJettyServer(): Unit = {
+    if (JettyUtils.customAuthenticator.isEmpty) {
+      // create and set SnappyBasicAuthenticator
+      JettyUtils.customAuthenticator = Some(new SnappyBasicAuthenticator)
+    }
   }
 
 }
